# detouring

./: CMakeLists.txt  Platform.hpp  detours.h  helpers.cpp  helpers.hpp
minhook/src/: buffer.c
test/: CMakeLists.txt  test_detouring.cpp
